--- a/index.html
+++ b/index.html
@@ -5,6 +5,30 @@
     </head>
 
     <body>
-    	
+
+
+    	<script src="/socket.io/socket.io.js"></script>
+   		<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+    	<script>
+    		$(function(){
+    			var socket = io();
+
+    			// tmp set username
+    			var name = prompt("Please enter a username", "");
+    			socket.emit('setUsername', name);
+    			socket.on('invalidName', function(err){
+    				name = prompt(err+" Please enter a username", "");
+    				socket.emit('setUsername', name);
+    			});
+
+    			socket.on('validName', function(valName){
+    				name = valName;
+    				alert("Name "+name+" accepted.");
+    			})
+
+
+    		});
+    	</script>
+
     </body>
 </html>
