--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,10 @@
 	<head>
     	<title>HackBoard</title>
 
+		<!-- Boostrap CSS -->
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css">
+
+		<!-- Custom CSS -->
 		<link href="css/index.css" type="text/css">
 
     </head>
@@ -26,9 +29,14 @@
 			</div>
 		</div>
 
+		<!-- JQuery -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<!-- Bootstrap JS -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<!-- Socket IO -->
     	<script src="/socket.io/socket.io.js"></script>
-   		<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+
+		<!-- Custom JS -->
     	<script scr="js/script.js"></script>
 
     </body>
