--- a/client/index.html
+++ b/client/index.html
@@ -1,30 +1,30 @@
 <!doctype html>
 <html>
 	<head>
-    	<title>HackBoard</title>
+    	<title>Join HackBoard</title>
 
 		<!-- Boostrap CSS -->
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css">
 
 		<!-- Custom CSS -->
-		<link href="css/index.css" type="text/css">
+		<link rel="stylesheet" href="css/index.css" type="text/css">
 
     </head>
 
     <body>
 
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-md-1 col-xs-12" id="tool-bar">
+		<div class="container">
+			<div class="row" id="form-row">
+				<div class="col-xs-12 col-md-4 col-md-offset-4">
+					<div class="form-group" id="username-form">
+						<input type="text" class="form-control" id="username">
+						<button class="btn btn-default">Submit</button>
+					</div>
 
-				</div>
-
-				<div class="col-md-7 col-xs-12" id="whiteboard">
-
-				</div>
-
-				<div class="col-md-4 col-xs-12" id="chat">
-
+					<div class="form-group" id="createOrJoin-form" hidden>
+						<button class="btn btn-default btn-block">Create</button>
+						<button class="btn btn-default btn-block">Join</button>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -35,9 +35,6 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<!-- Socket IO -->
     	<script src="/socket.io/socket.io.js"></script>
-
-		<!-- Custom JS -->
-    	<script scr="js/script.js"></script>
 
     </body>
 </html>
