--- a/client/index.html
+++ b/client/index.html
@@ -16,9 +16,17 @@
 		<div class="container">
 			<div class="row" id="form-row">
 				<div class="col-xs-12 col-md-4 col-md-offset-4">
+
 					<div class="form-group" id="username-form">
-						<input type="text" class="form-control" id="username">
-						<button class="btn btn-default">Submit</button>
+						<label for="username" class="sr-only">Username</label>
+						<input type="text" class="form-control" id="username" placeholder="Enter a username">
+						<button class="btn btn-default" id="user-submit">Submit</button>
+					</div>
+
+					<div class="col-xs-12 col-md-4 col-md-offset-4">
+						<div id="error-wrap">
+							<p id="error-msg"></p>
+						</div>
 					</div>
 
 					<div class="form-group" id="createOrJoin-form" hidden>
