Included script.js

--- a/client/index.html
+++ b/client/index.html
@@ -44,5 +44,8 @@
 		<!-- Socket IO -->
     	<script src="/socket.io/socket.io.js"></script>
 
+		<script src="js/script.js"></script>
+
+
     </body>
 </html>
