--- a/client/index.html
+++ b/client/index.html
@@ -16,19 +16,20 @@
 		<div class="container">
 			<div class="row" id="form-row">
 				<div class="col-xs-12 col-md-4 col-md-offset-4">
+					<form>
+						<div class="form-group" id="username-form">
+							<label for="username" class="sr-only">Username</label>
+							<input type="text" class="form-control" id="username" placeholder="Enter a username">
+							<input type="submit" value="Submit" class="btn btn-default" id="user-submit"/>
+							<p id="error-msg"></p>
+						</div>
 
-					<div class="form-group" id="username-form">
-						<label for="username" class="sr-only">Username</label>
-						<input type="text" class="form-control" id="username" placeholder="Enter a username">
-						<button class="btn btn-default" id="user-submit">Submit</button>
-						<p id="error-msg"></p>
-					</div>
 
-
-					<div class="form-group" id="createOrJoin-form" hidden>
-						<button class="btn btn-default btn-block">Create</button>
-						<button class="btn btn-default btn-block">Join</button>
-					</div>
+						<div class="form-group" id="createOrJoin-form" hidden>
+							<button class="btn btn-default btn-block">Create</button>
+							<button class="btn btn-default btn-block">Join</button>
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
