Fixed fade in username to top corner

--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
     <body>
 
 		<div class="container">
+			<h3 id="username-corner"></h3>
 			<div class="row" id="form-row">
 				<div class="col-xs-12 col-md-4 col-md-offset-4">
 					<form id="username-form">
@@ -27,9 +28,9 @@
 
 
 					<div class="form-group" id="createOrJoin-form" hidden>
-						<h3 id="username-corner"></h3>
-						<button class="btn btn-default btn-block">Create</button>
-						<button class="btn btn-default btn-block">Join</button>
+
+						<button class="btn btn-default btn-block" id="createRoom">Create</button>
+						<button class="btn btn-default btn-block" id="joinRoom">Join</button>
 					</div>
 				</div>
 			</div>
