--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
 					<form id="username-form">
 						<div class="form-group">
 							<label for="username" class="sr-only">Username</label>
-							<input type="text" class="form-control" id="username" placeholder="Enter a username">
+							<input type="text" class="form-control" id="username" placeholder="Enter a username" autocomplete="off">
 							<input type="submit" value="Submit" class="btn btn-default" id="user-submit"/>
 							<p id="error-msg"></p>
 						</div>
