--- a/client/whiteboard.html
+++ b/client/whiteboard.html
@@ -37,7 +37,7 @@
     	<script src="/socket.io/socket.io.js"></script>
 
 		<!-- Custom JS -->
-    	<script scr="js/script.js"></script>
+    	<script scr="js/whiteboard.js"></script>
 
     </body>
 </html>
