--- a/client/whiteboard.html
+++ b/client/whiteboard.html
@@ -7,7 +7,7 @@
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css">
 
 		<!-- Custom CSS -->
-		<link href="css/index.css" type="text/css">
+		<link href="css/whitebaord.css" type="text/css">
 
     </head>
 
