--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
 						<div class="form-group">
 							<label for="username" class="sr-only">Username</label>
 							<input type="text" class="form-control" id="username" placeholder="Enter a username" autocomplete="off" autofocus>
-							<input type="submit" value="Submit" class="btn btn-default" id="user-submit"/>
+							<input type="submit" value="Submit" class="btn btn-default" id="user-submit">
 							<p id="error-msg"></p>
 						</div>
 					</form>
