--- a/client/whiteboard.html
+++ b/client/whiteboard.html
@@ -4,10 +4,10 @@
     	<title>HackBoard</title>
 
 		<!-- Boostrap CSS -->
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css">
 
 		<!-- Custom CSS -->
-		<link href="css/whitebaord.css" type="text/css">
+		<link rel="stylsheet" href="css/whiteboard.css" type="text/css">
 
     </head>
 
