--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,8 @@
 
 		<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/index.css" type="text/css">
-
+		<link rel="stylsheet" href="css/whiteboard.css" type="text/css">
+		
     </head>
 
     <body>
@@ -40,6 +41,21 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="row" id="whiteboard-row">
+				<div class="col-md-1 col-xs-12" id="tool-bar">
+
+				</div>
+
+				<div class="col-md-7 col-xs-12" id="whiteboard">
+
+				</div>
+
+				<div class="col-md-4 col-xs-12" id="chat">
+
+				</div>
+			</div>
+
 		</div>
 
 		<!-- JQuery -->
@@ -49,8 +65,10 @@
 		<!-- Socket IO -->
     	<script src="/socket.io/socket.io.js"></script>
 
+		<!-- Custom JS -->
 		<script src="js/script.js"></script>
 
+		<script scr="js/whiteboard.js"></script>
 
     </body>
 </html>
