Deleted index.html, modified script.js

--- a/client/index.html
+++ b/client/index.html
@@ -9,12 +9,12 @@
 		<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/index.css" type="text/css">
 		<link rel="stylsheet" href="css/whiteboard.css" type="text/css">
-		
+
     </head>
 
     <body>
 
-		<div class="container">
+		<div class="container outer">
 			<h3 id="username-corner"></h3>
 
 			<div class="row" id="form-row">
@@ -68,7 +68,7 @@
 		<!-- Custom JS -->
 		<script src="js/script.js"></script>
 
-		<script scr="js/whiteboard.js"></script>
+		<script src="js/whiteboard.js"></script>
 
     </body>
 </html>
