Added whiteboard height

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
 
 		<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/index.css" type="text/css">
-		<link rel="stylsheet" href="css/whiteboard.css" type="text/css">
+		<link rel="stylesheet" href="css/whiteboard.css" type="text/css">
 
     </head>
 
@@ -47,11 +47,11 @@
 
 				</div>
 
-				<div class="col-md-7 col-xs-12" id="whiteboard">
+				<div class="col-md-9 col-xs-12" id="whiteboard">
 
 				</div>
 
-				<div class="col-md-4 col-xs-12" id="chat">
+				<div class="col-md-2 col-xs-12" id="chat">
 
 				</div>
 			</div>
