Fixed whiteboard styling

--- a/client/index.html
+++ b/client/index.html
@@ -42,16 +42,17 @@
 				</div>
 			</div>
 
-			<div class="row" id="whiteboard-row">
-				<div class="col-md-1 col-xs-12" id="tool-bar">
+			<div id="whiteboard-row">
+				<div id="topbar">
+					<div id="nickname"></div>
+					<div id="link"></div>
+				</div>
+				<div id="whiteboard">
+					<div id="toolbar"></div>
 
 				</div>
 
-				<div class="col-md-9 col-xs-12" id="whiteboard">
-
-				</div>
-
-				<div class="col-md-2 col-xs-12" id="chat">
+				<div id="chat">
 
 				</div>
 			</div>
