--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,8 @@
 		<link rel="stylesheet" href="css/index.css" type="text/css">
 		<link rel="stylesheet" href="css/whiteboard.css" type="text/css">
 
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     </head>
 
     <body>
@@ -53,7 +55,12 @@
 							<input type="text" id="code-txt" readonly/>
 						</div>
 					</div>
-
+					<div id="chat-bar">
+						<select id="users-online" class="form-control">
+							<option value="0" selected>Online</option>
+						</select>
+						<i class="fa fa-window-minimize" id="minimize-chat" title="Minimize chat"></i>
+					</div>
 				</div>
 				<div id="toolbar"></div>
 				<canvas id="whiteboard">
