Improved icon creds

--- a/client/credit.html
+++ b/client/credit.html
@@ -6,15 +6,15 @@
     <body>
             <p>Credit for the icons goes to:</p>
             <p style="font-family:">
-            Brush: Vectorgraphit<br />
-            Free-form: Google<br />
-            Line: Smashicons<br />
-            Rectangle: Google<br />
-            Colour: Google<br />
-            Ellipse: Freepik<br />
-            Text: Dave Gandy<br />
-            Selection: Those Icons<br />
-            Eraser: Freepik
+            Brush icon made by: [Vectorgraphit] from <a href ="https://www.flaticon.com">www.flaticon.com </a> <br />
+            Free-form line icon made by: [Google] from <a href ="https://www.flaticon.com">www.flaticon.com </a> <br />
+            Line icon made by: [Smashicons] from <a href ="https://www.flaticon.com">www.flaticon.com </a> <br />
+            Rectangle made by: [Google] from <a href ="https://www.flaticon.com">www.flaticon.com </a> <br />
+            Colour icon made by: [Google] from <a href ="https://www.flaticon.com">www.flaticon.com </a> <br />
+            Ellipse icon made by: [Freepik] from <a href ="https://www.flaticon.com">www.flaticon.com </a> <br />
+            Text icon made by: [Dave Gandy] from <a href ="https://www.flaticon.com">www.flaticon.com </a> <br />
+            Selection icon made by: [Those Icons] <a href ="https://www.flaticon.com">www.flaticon.com </a> <br />
+            Eraser icon made by: [Freepik] from <a href ="https://www.flaticon.com">www.flaticon.com </a> 
             </p>
     </body>
 </html>
