Starting chat stuff

--- a/client/index.html
+++ b/client/index.html
@@ -69,6 +69,7 @@
 
 				<div id="chat">
 
+					<input type="text" placeholder="Type a message..." id="chat-msg" class="form-control"/>
 				</div>
 			</div>
 
