Moved socket declaration into index.html- don't think it will fix it but lets see

--- a/client/index.html
+++ b/client/index.html
@@ -82,6 +82,7 @@
 		<!-- Socket IO -->
     	<script src="/socket.io/socket.io.js"></script>
 
+		<script>var socket = io();</script>
 		<!-- Custom JS -->
 		<script src="js/script.js"></script>
 
