List shows active users in chat

--- a/client/index.html
+++ b/client/index.html
@@ -50,7 +50,7 @@
 					<div id="whiteboard-bar">
 						<div id="nickname"></div>
 						<div id="link-wrap">
-							<div id="copy-code-error"></div>
+							<p id="copy-code-error"></p>
 							<button id="copy-code">Copy to clipboard</button>
 							<input type="text" id="code-txt" readonly/>
 						</div>
