Changed p error to div

--- a/client/index.html
+++ b/client/index.html
@@ -50,7 +50,7 @@
 					<div id="whiteboard-bar">
 						<div id="nickname"></div>
 						<div id="link-wrap">
-							<p id="copy-code-error"></p>
+							<div id="copy-code-error"></div>
 							<button id="copy-code">Copy to clipboard</button>
 							<input type="text" id="code-txt" readonly/>
 						</div>
