Fixed copy message to be inline

--- a/client/index.html
+++ b/client/index.html
@@ -50,9 +50,11 @@
 					<div id="whiteboard-bar">
 						<div id="nickname"></div>
 						<div id="link-wrap">
-							<div id="copy-code-error"></div>
-							<button id="copy-code">Copy to clipboard</button>
-							<input type="text" id="code-txt" readonly/>
+							<p id="copy-code-error"></p>
+							<div id="code-wrap">
+								<button id="copy-code">Copy to clipboard</button>
+								<input type="text" id="code-txt" readonly/>
+							</div>
 						</div>
 					</div>
 					<div id="chat-bar">
