--- a/client/index.html
+++ b/client/index.html
@@ -59,7 +59,7 @@
 					</div>
 					<div id="chat-bar">
 						<select id="users-online" class="form-control">
-							<option value="0" selected="true" disabled="true">Online</option>
+							<option value="0" selected="true" hidden>Online</option>
 						</select>
 						<i class="fa fa-window-minimize" id="minimize-chat" title="Minimize chat"></i>
 					</div>
