Just seeing stuff

--- a/client/index.html
+++ b/client/index.html
@@ -61,7 +61,7 @@
 						<select id="users-online" class="form-control">
 							<option value="0" selected="true" hidden>Online</option>
 						</select>
-						<i class="fa fa-window-minimize" id="minimize-chat" title="Minimize chat"></i>
+						<i class="fa fa-window-minimize" id="chat-minimize" title="Minimize chat"></i>
 					</div>
 				</div>
 				<div id="toolbar"></div>
