Fixed resolution of whiteboard

--- a/client/index.html
+++ b/client/index.html
@@ -65,7 +65,7 @@
 					</div>
 				</div>
 				<div id="toolbar"></div>
-				<canvas id="whiteboard">
+				<canvas id="whiteboard" width="800" height="800">
 
 				</canvas>
 
