--- a/client/index.html
+++ b/client/index.html
@@ -48,7 +48,7 @@
 				<div id="topbar">
 
 					<div id="whiteboard-bar">
-						<div id="nickname"></div>
+						<div id="nickname"><p>Logged in as <span id="nickname-val" style="font-weight: bold;"></span></p></div>
 						<div id="link-wrap">
 							<p id="copy-code-error"></p>
 							<div id="code-wrap">
