Added sync and refresh buttons

--- a/client/index.html
+++ b/client/index.html
@@ -48,7 +48,14 @@
 				<div id="topbar">
 
 					<div id="whiteboard-bar">
-						<div id="nickname"><p>Logged in as <span id="nickname-val" style="font-weight: bold;"></span></p></div>
+						<div id="nickname">
+							<p>Logged in as <span id="nickname-val" style="font-weight: bold;"></span></p>
+							<div id="control-btns">
+								<i class="fa fa-2x fa-sign-out" id="logout" title="Log out"></i>
+								<i class="fa fa-2x fa-refresh" id="refresh" title="Sync changes"></i>
+							</div>
+						</div>
+
 						<div id="link-wrap">
 							<p id="copy-code-error"></p>
 							<div id="code-wrap">
