--- a/client/index.html
+++ b/client/index.html
@@ -53,6 +53,7 @@
 							<div id="control-btns">
 								<i class="fa fa-2x fa-sign-out" id="logout" title="Log out"></i>
 								<i class="fa fa-2x fa-refresh" id="refresh" title="Sync changes"></i>
+								<i class="fa fa-2x fa-file-o" id="blank" title="Clear board"></i>
 							</div>
 						</div>
 
