Added brush width

--- a/client/index.html
+++ b/client/index.html
@@ -72,7 +72,14 @@
 						<i class="fa fa-window-minimize" id="chat-minimize" title="Minimize chat"></i>
 					</div>
 				</div>
-				<div id="toolbar"></div>
+				<div id="toolbar">
+
+					<div id="toolbar-main"></div>
+					<div id="toolbar-brushWidth">
+						<label for="brush-width">Brush width</label>
+						<input id="brush-width" type="number" value="5" min="1">
+					</div>
+				</div>
 				<canvas id="whiteboard" width="1200" height="800">
 
 				</canvas>
