Made some changes

--- a/client/index.html
+++ b/client/index.html
@@ -75,7 +75,7 @@
 				<div id="toolbar">
 
 					<div id="toolbar-main"></div>
-					<div id="toolbar-brushWidth">
+					<div id="toolbar-brushTools">
 						<label for="brush-width">Brush width</label>
 						<input id="brush-width" type="number" value="5" min="1">
 					</div>
